--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,17 +5,15 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go: [ '1.18' ]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: "Set up Go ${{ matrix.go }}"
-      uses: actions/setup-go@v3
-      with:
-        go-version: ${{ matrix.go }}
+      - name: "Set up Go"
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          cache: true
 
-    - name: "Test"
-      run: go test -v ./...
+      - name: Test
+        run: go test -v ./...
